[tool.poetry]
name = "envo"
version = "0.9.8.1"
description = "Smart Environments handling - Define command hooks, file hooks and env variables in python and activate hot reloaded shells."
authors = ["Damian Krystkiewicz <damian.krystkiewicz@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Topic :: System :: Shells",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

license = "Apache 2.0"
readme = "README.rst"

include = ["envo/__version__.py"]

[tool.poetry.urls]
homepage = "https://gitlab.com/plasma-opensource/envo"

[tool.poetry.dependencies]
python = ">=3.6.1, <4.0"
dataclasses = { version = ">=0.7,<0.9", python = "~3.6" }
typing-extensions = { version = "^3.7.4", python = "<3.8" }
prompt_toolkit = "^3"
rhei = "^0.5.2"
pygments = "^2.6.1"
xonsh = "0.9.27"
watchdog = "^2.1.0"
rich = "^9.6.1"
fire = "^0.4.0"
loguru = "^0.5"
globmatch = "^2.0.0"
envium = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"
pep8-naming = "^0.10.0"
mypy = "^0.770"
pygments = "^2.6.1"
pytest-mock = "^3.1.0"
toml = "^0.10.0"
pytest-cov = "^2.9.0"
rhei = "^0.5.2"
pyte = "^0.8.0"
pytest-rerunfailures = "^9.0"
isort = "^5.6.4"
black = "^20.8b1"
loguru-caplog = "^0.2.0"
stickybeak = "0.6.0"
flaky = "^3.7.0"

[tool.poetry.scripts]
envo = "envo.scripts:_main"

[tool.isort]
profile = "hug"
skip = ["__init__.py", ".venv"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

